--- a/bikecraft/orcamento.html
+++ b/bikecraft/orcamento.html
@@ -14,7 +14,7 @@
     <link rel="preload" href="./css/pages/orcamento.min.css" as="style" />
     <link rel="stylesheet" href="./css/pages/orcamento.min.css" />
 
-    <title>Bikcraft - Termos e Condições</title>
+    <title>Bikcraft - Orçamento</title>
     <meta
       name="description"
       content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft."
